// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MoneyInput /> required 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  required={true}
  type="text"
  validation={
    Array [
      [Function],
      undefined,
    ]
  }
  value=""
/>
`;

exports[`<MoneyInput /> where props.value is pi 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  type="text"
  validation={
    Array [
      [Function],
      undefined,
    ]
  }
  value="3.141592653589793"
/>
`;

exports[`<MoneyInput /> with a custom className 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field custom-class"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  type="text"
  validation={
    Array [
      [Function],
      undefined,
    ]
  }
  value=""
/>
`;

exports[`<MoneyInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  type="text"
  validation={
    Array [
      [Function],
      undefined,
    ]
  }
  value=""
/>
`;

exports[`<MoneyInput /> with proper money 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter dollar amount"
  type="text"
  validation={
    Array [
      [Function],
      undefined,
    ]
  }
  value="12.23"
/>
`;
